--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,123 @@
 .App {
   text-align: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+img {
+  height: 150px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card {
+  border: 1px solid black;
+  width: 300px;
+  padding: 20px;
+  border-radius: 10px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.productsContainer {
+  padding: 30px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  gap: 20px;
+}
+.button {
+  width: 60%;
+  border: none;
+  font-weight: 600;
+  border-radius: 15px;
+  height: 40px;
   color: white;
+  background-color: black;
+}
+.Navbar {
+  background-color: aquamarine;
+  display: flex;
+  height: 8vh;
+  font-size: 30px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1% 5%;
+}
+.table {
+  margin: auto;
+  width: 80%;
+  border-collapse: collapse;
+}
+.table td,
+th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+  text-align: center;
+  font-size: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.table tr:nth-child(even) {
+  background-color: #dddddd;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cart {
+  background-color: #50cff1;
+  padding: 10px;
+  border-radius: 15px;
+  gap: 5px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cart a {
+  text-decoration: none;
+  color: white;
+  font-size: smaller;
+  line-height: 1;
+}
+.cart img {
+  width: 25px;
+  height: 25px;
+}
+.cart span {
+  background-color: black;
+  display: inline-block;
+  line-height: 1.2;
+  min-width: 35px;
+  height: 35px;
+  border-radius: 50%;
+}
+.decrement {
+  border: none;
+  background-color: red;
+  border-radius: 50%;
+  color: white;
+  margin: 0 5px;
+  width: 25px;
+  font-size: 20px;
+  height: 25px;
+}
+.increment {
+  border: none;
+  background-color: greenyellow;
+  border-radius: 50%;
+  color: white;
+  margin: 0 5px;
+  width: 25px;
+  height: 25px;
+  font-size: 20px;
+}
+.table-container h3 {
+  text-align: end;
+  padding: 0 10%;
+}
+.home a,
+.shop {
+  text-decoration: none;
+  font-weight: 500;
+  color: black;
+}
+.home,
+.shop {
+  line-height: 1;
+  font-size: 25px;
+}
+.card p {
+  height: 65px;
 }
